--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-portfolio-cara",
-  "description": "Playful & Colorful One-Page website with Parallax effect powered by react-spring, TailwindCSS.",
+  "name": "cfPortfolioPage",
+  "description": "Portfolio page of Christoph Flick",
   "version": "3.0.0",
-  "author": "LekoArts <hello@lekoarts.de> (https://www.lekoarts.de)",
+  "author": "Christoph Flick <hi@christophflick.de> (https://www.christophflick.de)",
   "license": "MIT",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
@@ -58,5 +58,5 @@
   "bugs": {
     "url": "https://github.com/LekoArts/gatsby-starter-portfolio-cara/issues"
   },
-  "homepage": "https://cara.lekoarts.de"
+  "homepage": "https://christophflick.de"
 }
