--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.0",
+    "gh-pages": "^2.0.1",
     "prettier": "^1.15.3"
   },
   "repository": {
