--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
+    "color": "^3.1.0",
     "gatsby": "^2.0.78",
     "gatsby-image": "^2.0.25",
     "gatsby-plugin-manifest": "^2.0.13",
@@ -34,7 +35,7 @@
   ],
   "scripts": {
     "dev": "gatsby develop -o",
-    "develop": "gatsby develop",
+    "devlocal": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "deploy": "gatsby build && gh-pages -d public -b master",
