--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://www.christophflick.de/"
-title = "Christoph Flick's Website"
-copyright = "Copyright &copy; 2020 - Christoph Flick"
+title = "Christoph Flick"
+copyright = "Copyright &copy; 2020 - Christoph Flick | [Impressum & Datenschutz](/impressum)"
 canonifyurls = true
 theme = "hugo-kiera"
 
@@ -15,7 +15,9 @@ pygmentsCodeFences = true
     name = "Christoph Flick"
     github = "ChFlick"
     gitlab = "ChFlick"
-    #linkedin = "username"
+    linkedin = "christoph-flick"
+    email = "hi (at) christophflick.de"
+    xing = "Christoph_Flick2"
     #facebook = "username"
     #twitter = "ds_says"
     #instagram = "username"
@@ -23,8 +25,8 @@ pygmentsCodeFences = true
     #youtube = "user/username" # or channel/channelname
 
 [params]
-    tagline = "A Hugo theme for creative and technical writing"
-    description = "Kiera: A Hugo theme for creative and technical writing."
+    tagline = "A webspace with not yet known information"
+    #description = "Kiera: A Hugo theme for creative and technical writing."
     #images = [""] #This is used for opengraph/twitter cards.
     customCSS = []  #Optional Customised CSS
     #favicon = ""
