--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,8 @@
     HUGO_ENV = "production"
     HUGO_VERSION = "0.62.2"
     HUGO_ENABLEGITINFO = "true"
+
+[[redirects]]
+    from = "/*"
+    to = "/404.html"
+    status = 404
