--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,9 @@
     from = "/*"
     to = "/404.html"
     status = 404
+
+[[redirects]]
+    from = "https://chflick.netlify.com/*"
+    to = "https://www.christophflick.de/:splat"
+    status = 301
+    force = true
