--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ pygmentsCodeFences = true
     tagline = "A webspace with not yet known information"
     description = "This is the personal webspace of Christoph Flick, a german software engineer and current master's degree student of Digital Transformation."
     #images = [""] #This is used for opengraph/twitter cards.
-    customCSS = []  #Optional Customised CSS
+    customCSS = ["css/klaro.css"]  #Optional Customised CSS
     #favicon = ""
 
 # uncomment to enable the Tags link on the main toolbar
