--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ pygmentsCodeFences = true
     email = "hi (at) christophflick.de"
     xing = "Christoph_Flick2"
     #facebook = "username"
-    #twitter = "ds_says"
+    twitter = "flicksterino"
     #instagram = "username"
     #stackoverflow = "username"
     #youtube = "user/username" # or channel/channelname
